# rust_zero2prod

./: Cargo.toml  README.md  run_watch.sh
.github/workflows/: rust-ci.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs  health_check.tests.rs  health_check_tests.rs
