[package]
name = "rust_zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde ={ version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"